syntax = "proto3";
package account;

service AccountService {
  rpc createAccount(AccountCreation) returns (Account) {}
  rpc transfer(Transfer) returns (transferMessage) {}
  rpc deleteAccount(Account) returns (Status) {}
  rpc getIban(UserId) returns (Account){}
}

message UserId {
  string userid = 1;
}

message AccountCreation {
  string userid = 1;
  string description = 2;
}

message Account {
  string userid = 1;
  string iban = 2;
}

message transferMessage {
  string status = 1;
  string userid = 2;
  string lastname = 3;
  string message = 5;
}

message Transfer {
  string userid = 7;
  string iban = 1;
  string purpose = 2;
  string destiban = 3;
  string amount = 4;
  string start_date = 5;
  string repeat = 6;
}

message Status {
  string status = 1;
  string message = 2;
}