syntax = "proto3";
package user;

service UserService {
    rpc verifyUser(UserToken) returns (UserId) {}
    rpc getUser(UserId) returns (User) {}
}

message UserId {
    string uid = 1;
}

message UserToken {
    string token = 1;
}

message User {
    string uid = 1;
    int32 gender = 2;  // 0 = Divers - 1 = Male - 2 = Female
    string firstName = 3;
    string lastName = 4;
    string nickName = 5;
    string email = 6;
    string birthDate = 7;
    string streetAddress = 8;
    string zipCode = 9;
    string city = 10;
    string phone = 11;
    string image = 12;
    bool isActive = 13;
}